# federated-ml

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
docs/: data-distribution.md  evaluation.md  hyperparameters.md
docs/plans/: 2026-03-04-aws-infra-design.md  2026-03-04-aws-infra-implementation.md  2026-03-04-data-pipeline-design.md  2026-03-04-data-pipeline-implementation.md  2026-03-05-model-development-design.md  2026-03-05-model-development-implementation.md  2026-03-06-federation-design.md  2026-03-06-federation-implementation.md  2026-03-08-analysis-paper-design.md  2026-03-08-analysis-paper-implementation.md  2026-03-08-experiments-design.md  2026-03-08-experiments-implementation.md
experiments/: eda.py  run_all.py  run_centralized.py  run_federated.py  run_gossip.py  run_local_only.py
experiments/configs/: default.yaml
infra/: Pulumi.yaml  __main__.py  config.py
infra/compute/: __init__.py  instances.py  key_pair.py
infra/network/: __init__.py  peering.py  vpcs.py
infra/security/: __init__.py  iam.py  (+1 more)
orchestrate/: collect_results.sh  config.py  deploy.sh  merge_results.py  run_experiment.py  status.sh  teardown.sh
paper/: Federated Learning for ICU Length of Stay Prediction - A Comparative Study of FedAvg vs D-PSGD Using MIMIC-IV.docx  main.tex  references.bib
tests/: conftest.py  test_data_extract.py  test_data_features.py  test_data_loader.py  test_data_partition.py  test_evaluation.py  test_federation.py  test_infra_deployed.py  test_infra_unit.py  test_model.py  test_xgboost_baseline.py
(+77 files in other folders)
