[project]
name = "federated-deployment"
version = "0.1.0"
description = "FedCost: Federated Learning for DRG-Based Healthcare Cost Prediction — AWS Infrastructure"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.0",
    "pulumi-aws>=6.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
ml = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.2",
]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "boto3>=1.34",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
